--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
+    "firebase-admin": "^12.2.0",
     "genkit": "^1.14.1",
     "handlebars": "^4.7.8",
     "html2canvas": "^1.4.1",
