--- a/package.json
+++ b/package.json
@@ -42,10 +42,8 @@
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
-    "firebase-admin": "^12.2.0",
     "genkit": "^1.14.1",
-    "html2canvas": "^1.4.1",
-    "jspdf": "^2.5.1",
+    "handlebars": "^4.7.8",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "patch-package": "^8.0.0",
@@ -56,15 +54,15 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "universal-cookie": "^7.2.0",
+    "uuid": "^9.0.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@types/handlebars": "^4.1.0",
-    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
+    "@types/handlebars": "^4.1.0",
     "genkit-cli": "^1.14.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
